--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,12 @@ jobs:
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
+    
+    - name: Setup PHP with PCOV
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.1'
+        coverage: pcov
 
     - name: Run CodeSniffer (phpcs)
       run: composer run-script phpcs
