--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,16 @@
     "require-dev": {
         "phpstan/phpstan": "^1.10",
         "squizlabs/php_codesniffer": "^3.7",
-        "phpunit/phpunit": "^10.2"
+        "phpunit/phpunit": "^10.2",
+        "saggre/phpdocumentor-markdown": "^0.1.3"
     },
     "scripts": {
+        "create-all-docs": [
+            "@create-html-docs",
+            "@create-markdown-docs"
+        ],
+        "create-html-docs": "./phpdoc",
+        "create-markdown-docs": "./phpdoc --target=docs/phpdoc/markdown --template='vendor/saggre/phpdocumentor-markdown/themes/markdown'",
         "phpcs": "./vendor/bin/phpcs ./src",
         "phpstan": "@phpstan-8.1",
         "phpstan-8.1": "./vendor/bin/phpstan --configuration=phpstan-8.1.neon",
