--- a/.github/workflows/php-8.2.yml
+++ b/.github/workflows/php-8.2.yml
@@ -45,7 +45,7 @@ jobs:
       run: composer run-script phpcs
 
     - name: Run Static Analyzer (phpstan)
-      run: composer run-script phpstan
+      run: composer run-script phpstan-8.2
 
     - name: Run Unit Tests (phpunit)
       run: composer run-script test
