changed license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "csv",
         "reader"
     ],
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "Ringo Leese",
