--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,15 @@
             "role": "Developer"
         }
     ],
+    "config": {
+        "allow-plugins": {
+            "captainhook/hook-installer": true,
+            "phpstan/extension-installer": true
+        },
+        "platform": {
+            "php": "8.1"
+        }
+    },
     "require": {
         "php": ">=8.1",
         "ext-iconv": "*",
@@ -21,12 +30,12 @@
     "require-dev": {
         "captainhook/captainhook": "^5.23",
         "captainhook/hook-installer": "^1.0",
-        "phpstan/phpstan": "^1.11",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.2",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
         "phpunit/phpunit": "^10.5",
-        "saggre/phpdocumentor-markdown": "^0.1.3",
-        "squizlabs/php_codesniffer": "^3.9"
+        "saggre/phpdocumentor-markdown": "^0.1",
+        "squizlabs/php_codesniffer": "^3.11"
     },
     "scripts": {
         "dev:analyze": [
@@ -36,6 +45,7 @@
         "dev:analyze:phpstan-8.1": "phpstan --configuration=phpstan-8.1.neon --memory-limit=256M",
         "dev:analyze:phpstan-8.2": "phpstan --configuration=phpstan-8.2.neon --memory-limit=256M",
         "dev:analyze:phpstan-8.3": "phpstan --configuration=phpstan-8.3.neon --memory-limit=256M",
+        "dev:analyze:phpstan-8.4": "phpstan --configuration=phpstan-8.4.neon --memory-limit=256M",
         "dev:lint": [
             "@dev:lint:phpcs"
         ],
@@ -59,12 +69,6 @@
     "autoload": {
         "psr-4": {
             "Locr\\Lib\\": "src/"
-        }
-    },
-    "config": {
-        "allow-plugins": {
-            "captainhook/hook-installer": true,
-            "phpstan/extension-installer": true
         }
     }
 }
